--- a/index.html
+++ b/index.html
@@ -1,1 +1,112 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Meu Portfólio</title>
+
+  <!-- ++ Bootstrap CSS ++ -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- ++ Linkagem com o CSS ++ -->
+  <link href="style.css" rel="stylesheet">
+
+  <!-- ++ Link para o Font Awesome ++ -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+</head>
+
+<body>
+
+  <!-- ++ Header ++ -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Meu Portfólio</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#habilidades">Habilidades | </a></li>
+          <li class="nav-item"><a class="nav-link" href="#aprendizado">Aprendizado | </a></li>
+          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- ++ Apresentação ++ -->
+  <section id="apresentacao">
+    <div class="container">
+      <div class="apresentacao-conteudo">
+        <img src="https://i.postimg.cc/YSk7mZXb/IMG-20240703-191659577-HDR-AE.jpg" alt="Foto de Nicolas" class="foto-perfil">
+        <div class="apresentacao-texto">
+          <h1>Olá, meu nome é Nicolas Manoel</h1>
+          <p>Sou adolescente trabalhador da Assprom-MG e participo do curso de introdução a Programação Web.
+            <br><br>
+              Viso projetos em Nuvem e Segurança (Cloud & Security)!!
+            </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="habilidades">
+    <div class="container text-center">
+      <h2>Habilidades</h2>
+
+      <!-- Carrossel de Habilidades -->
+      <div id="carouselHabilidades" class="carousel slide mt-4" data-bs-interval="false">
+        <div class="carousel-inner">
+
+          <!-- Slide 1 -->
+          <div class="carousel-item active">
+            <div class="d-flex justify-content-center gap-3 flex-wrap">
+              <div class="card">
+                <div class="card-body">HTML5</div>
+              </div>
+              <div class="card">
+                <div class="card-body">CSS3</div>
+              </div>
+              <div class="card">
+                <div class="card-body">Bootstrap 5</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Botões de navegação -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselHabilidades" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselHabilidades" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
+  </section>
+
+
+
+  <!-- ++ Aprendizado ++ -->
+  <section id="aprendizado">
+    <div class="container text-center">
+      <h2>O que aprendi no curso</h2>
+
+      <p class="card-text">No curso aprendi a estruturar páginas com HTML</ </div>
+    </div>
+    </div>
+  </section>
+
+  <!-- ++ Contato / Footer ++ -->
+  <footer id="contato" class="text-center">
+    <h4>Entre em contato</h4>
+    <p>
+      <i class="fab fa-instagram"></i>
+      Siga no Instagram:
+      <a href="https://instagram.com/izacloy" class="text-white">
+        @izacloy
+      </a>
+    </p>
+
+  </footer>
+
+</body>
+
+</html>
